fix chat paragraph spacing bug

--- a/public/js/views/chat/chatItemView.less
+++ b/public/js/views/chat/chatItemView.less
@@ -22,11 +22,6 @@
   transition: background-color 0.5s linear;
   // border-top: 1px solid transparent;
 
-  /* this handles all styles for burst start */
-  &.burstStart {
-
-  }
-
   &.chat-item__highlighted {
     background-color: @permalink-highlight-bg;
   }
@@ -293,9 +288,9 @@
     margin-top: 0;
   }
 
-  p:last-child {
+/*  p:last-child {
     margin-bottom: 0;
-  }
+  }*/
 
   .trpChatInput {
     display: block;
